<resources>
    <string name="app_name">PAC3App</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_map">Maps</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_quizz">Quizzes</string>
    <string name="menu_museums">Museums</string>
    <string name="icons">Icons made by Freepik and Flaticon are licensed by Creative Commons BY 3.0</string>
</resources>
