<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">


   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginBottom="20dp"
       android:layout_marginTop="20dp"
       android:layout_marginLeft="30dp"
       android:layout_marginRight="30dp"

       >
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:layout_marginTop="20dp">
               <RelativeLayout
                   android:id="@+id/rellay_maps"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:background="@color/red"
                   android:layout_weight="0.55"
                   android:clickable="true"
                   android:foreground="?attr/selectableItemBackground">
                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_centerInParent="true">

                       <ImageView
                           android:id="@+id/imgView1"
                           android:layout_width="60dp"
                           android:layout_height="60dp"
                           android:layout_centerHorizontal="true"
                           android:adjustViewBounds="true"
                           android:tint="@color/white"
                           android:padding="8dp"
                           android:scaleType="centerInside"
                           android:src="@drawable/world" />
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/menu_map"
                           android:textSize="14sp"
                           android:layout_below="@+id/imgView1"
                           android:layout_centerHorizontal="true"/>
                   </RelativeLayout>
               </RelativeLayout>

               <RelativeLayout
                   android:id="@+id/rellay_schools"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_weight="0.55"
                   android:background="@color/yellow"
                   android:clickable="true"
                   android:foreground="?attr/selectableItemBackground">

                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_centerInParent="true">

                       <ImageView
                           android:id="@+id/imgView2"
                           android:layout_width="60dp"
                           android:layout_height="60dp"
                           android:layout_centerHorizontal="true"
                           android:adjustViewBounds="true"
                           android:padding="8dp"
                           android:scaleType="centerInside"
                           android:src="@drawable/university"
                           android:tint="@color/white" />

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_below="@+id/imgView2"
                           android:layout_centerHorizontal="true"
                           android:text="@string/menu_museums"
                           android:textSize="14sp" />
                   </RelativeLayout>
               </RelativeLayout>
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:layout_marginTop="20dp">
               <RelativeLayout
                   android:id="@+id/rellay_contacts"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:background="@color/line"
                   android:layout_weight="0.55"
                   android:clickable="true"
                   android:foreground="?attr/selectableItemBackground">
                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_centerInParent="true">

                       <ImageView
                           android:id="@+id/imgView3"
                           android:layout_width="60dp"
                           android:layout_height="60dp"
                           android:layout_centerHorizontal="true"
                           android:adjustViewBounds="true"
                           android:padding="8dp"
                           android:scaleType="centerInside"
                           android:tint="@color/white"
                           android:src="@drawable/personal" />
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/menu_contacts"
                           android:textSize="14sp"
                           android:layout_below="@+id/imgView3"
                           android:layout_centerHorizontal="true"/>
                   </RelativeLayout>
               </RelativeLayout>
               <RelativeLayout
                   android:id="@+id/rellay_quizzes"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:background="@color/green"
                   android:layout_weight="0.55"
                   android:clickable="false"
                   android:foreground="?attr/selectableItemBackground">
                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_centerInParent="true">

                       <ImageView
                           android:id="@+id/imgView4"
                           android:layout_width="60dp"
                           android:layout_height="60dp"
                           android:layout_centerHorizontal="true"
                           android:adjustViewBounds="true"
                           android:padding="8dp"
                           android:tint="@color/white"
                           android:scaleType="centerInside"
                           android:src="@drawable/icquizz" />
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/menu_quizz"
                           android:textSize="14sp"
                           android:layout_below="@+id/imgView4"
                           android:layout_centerHorizontal="true"/>
                   </RelativeLayout>
               </RelativeLayout>
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:layout_marginTop="20dp" >
               <RelativeLayout
                   android:id="@+id/rellay_settings"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:background="@color/violet"
                   android:layout_weight="0.55"
                   android:clickable="false"
                   android:foreground="?attr/selectableItemBackground">
                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_centerInParent="true">

                       <ImageView
                           android:id="@+id/imgView5"
                           android:layout_width="60dp"
                           android:layout_height="60dp"
                           android:layout_centerHorizontal="true"
                           android:adjustViewBounds="true"
                           android:padding="8dp"
                           android:scaleType="centerInside"
                           android:tint="@color/white"
                           android:src="@drawable/settings" />
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/menu_settings"
                           android:textSize="14sp"
                           android:layout_below="@+id/imgView5"
                           android:layout_centerHorizontal="true"/>
                   </RelativeLayout>
               </RelativeLayout>
               <RelativeLayout
                   android:id="@+id/rellay_help"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:background="@color/darkblue"
                   android:layout_weight="0.55"
                   android:foreground="?attr/selectableItemBackground">
                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_centerInParent="true">
                       <ImageView
                           android:id="@+id/imgView6"
                           android:layout_width="60dp"
                           android:layout_height="60dp"
                           android:layout_centerHorizontal="true"
                           android:adjustViewBounds="true"
                           android:padding="8dp"
                           android:scaleType="centerInside"
                           android:tint="@color/white"
                           android:src="@drawable/questions" />
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/menu_help"
                           android:textSize="14sp"
                           android:layout_below="@+id/imgView6"
                           android:layout_centerHorizontal="true"/>

                   </RelativeLayout>
               </RelativeLayout>
           </LinearLayout>
       </LinearLayout>
   </RelativeLayout>
</RelativeLayout>